crates/php-parser/tests/snapshots/nikic_integration_tests__nikic_stmt_function_specialvars.snap
---
source: crates/php-parser/tests/nikic_integration_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "a",
          "params": [],
          "body": [
            {
              "kind": {
                "Global": [
                  {
                    "kind": {
                      "Variable": "a"
                    },
                    "span": {
                      "start": 33,
                      "end": 35
                    }
                  },
                  {
                    "kind": {
                      "VariableVariable": {
                        "kind": {
                          "String": "b"
                        },
                        "span": {
                          "start": 39,
                          "end": 42
                        }
                      }
                    },
                    "span": {
                      "start": 37,
                      "end": 42
                    }
                  },
                  {
                    "kind": {
                      "VariableVariable": {
                        "kind": {
                          "Variable": "c"
                        },
                        "span": {
                          "start": 46,
                          "end": 48
                        }
                      }
                    },
                    "span": {
                      "start": 45,
                      "end": 48
                    }
                  }
                ]
              },
              "span": {
                "start": 26,
                "end": 54
              }
            },
            {
              "kind": {
                "StaticVar": [
                  {
                    "name": "c",
                    "default": null,
                    "span": {
                      "start": 61,
                      "end": 63
                    }
                  },
                  {
                    "name": "d",
                    "default": {
                      "kind": {
                        "String": "e"
                      },
                      "span": {
                        "start": 70,
                        "end": 73
                      }
                    },
                    "span": {
                      "start": 65,
                      "end": 73
                    }
                  }
                ]
              },
              "span": {
                "start": 54,
                "end": 75
              }
            }
          ],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 76
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 76
  }
}
